--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="UTF-8" />
-		<link rel="icon" type="image/" href="./src/imgs/N1.png" />
+		<link rel="icon" type="image/" href="./src/imgs/icon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>DeLaVid</title>
 	</head>
